[gd_scene load_steps=16 format=3 uid="uid://by7kc25k3qxxj"]

[ext_resource type="Script" path="res://Nodos/Personajes/enemy.gd" id="1_6ftgj"]
[ext_resource type="Texture2D" uid="uid://dlyllmsak2s1j" path="res://Recursos/SpritesEscenario/TX Player.png" id="1_rn33v"]
[ext_resource type="Shader" path="res://Nodos/Jugador/damage_flash.gdshader" id="2_mpw2n"]
[ext_resource type="Texture2D" uid="uid://bp42hh2ybmqgs" path="res://Recursos/prod/bubbles_GansoP.png" id="2_o4ws3"]
[ext_resource type="Texture2D" uid="uid://c5p28f5mhwfr8" path="res://Recursos/prod/bacteria.png" id="3_3kcso"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m7utf"]
shader = ExtResource("2_mpw2n")
shader_parameter/flash_color = Color(0, 0.439216, 0, 1)
shader_parameter/flash_value = null

[sub_resource type="AtlasTexture" id="AtlasTexture_na6kb"]
atlas = ExtResource("1_rn33v")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyxql"]
atlas = ExtResource("3_3kcso")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_j7eyw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_o4ws3")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_na6kb")
}],
"loop": true,
"name": &"walkBack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyxql")
}],
"loop": true,
"name": &"walkDown",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_l5huv"]
resource_name = "flash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [null, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_u2gai"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ukxw"]
_data = {
"RESET": SubResource("Animation_u2gai"),
"flash": SubResource("Animation_l5huv")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_b8xmp"]
radius = 892.296

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06ays"]
size = Vector2(31, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w6pm8"]
size = Vector2(31, 31.5)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_6ftgj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_m7utf")
sprite_frames = SubResource("SpriteFrames_j7eyw")
animation = &"walkDown"
offset = Vector2(0, -15)

[node name="flash_anim" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_5ukxw")
}

[node name="detection_Area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_Area"]
shape = SubResource("CircleShape2D_b8xmp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -15)
shape = SubResource("RectangleShape2D_06ays")

[node name="enemy_hitbox" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(-0.5, -14.75)
shape = SubResource("RectangleShape2D_w6pm8")

[connection signal="body_entered" from="detection_Area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_entered" from="detection_Area" to="CollisionShape2D" method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_Area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_exited" from="detection_Area" to="CollisionShape2D" method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
